# east-africa-food-prices

./: .gitignore  03_model_training.ipynb  MODEL_BENCHMARKS.md  POSTS_AND_LEARNINGS.md  README.md  ROADMAP.md
.claude/: settings.json
.devcontainer/: devcontainer.json
food_prices_api/: features.py  main.py  models.py  pyproject.toml  streamlit_app.py
food_prices_api/tests/: test_api.py  test_features.py
food_prices_model/: 01_exploration.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_cpi_feature.ipynb  05_retrain_full.ipynb  06_prophet.ipynb  07_cpi_backfill.ipynb  08_retrain_v4.ipynb  09_retrain_v5.ipynb  10_retrain_v6.ipynb  model_card.md
food_prices_model/data/: uganda_maize_prices_owino.csv
