[project]
name = "food-prices-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "huggingface-hub>=1.16.1",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
